--- a/Yolofy.Test/Yolofy.Test.csproj
+++ b/Yolofy.Test/Yolofy.Test.csproj
@@ -13,7 +13,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Yolofy\Yolofy.csproj" />
+    <ProjectReference Include="..\Yolofy.TupleTables\Yolofy.TupleTables.csproj" />
   </ItemGroup>
 
 </Project>
